--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -9,7 +9,7 @@ jobs:
 
   linux-windows-build:
     name: MinGW Build
-    if: startsWith( github.ref, 'refs/tags/v')
+    # if: startsWith( github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     timeout-minutes: 45
     steps:
