--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -2,14 +2,14 @@ name: Release
 
 on:
   push:
-    # tags: ["v[1-9]+.[0-9]+.[0-9]+"]
+    tags: ["v[1-9]+.[0-9]+.[0-9]+"]
     branches: ["main"]
 
 jobs:
 
   linux-windows-build:
     name: MinGW Build
-    # if: startsWith( github.ref, 'refs/tags/v')
+    if: startsWith( github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     timeout-minutes: 45
     steps:
@@ -31,7 +31,8 @@ jobs:
         make clean
         make
         rm -f ./compiled/.gitkeep
-        cp extension.json ./compiled/extension.json
+        VERSION=$(git describe --tags --abbrev=0)
+        cat extension.json | jq '.version |= "$VERSION"' > ./compiled/extension.json
         cp LICENSE ./compiled/LICENSE
         cd compiled
         tar -czvf ../nanodump.tar.gz .
