Fix minisign cmd

--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -49,8 +49,8 @@ jobs:
       run: |
         touch ~/minisign.key && chmod 600 ~/minisign.key
         echo "$MINISIGN_PRIVATE_KEY" > ~/minisign.key
-        MANIFEST=$(cat extension.json | base64)
-        bash -c "echo \"\" | ~/minisign -s ~/minisign.key -S -m ./nanodump.tar.gz -t $MANIFEST -x nanodump.minisig"
+        MANIFEST=$(cat extension.json | base64 -w 0)
+        bash -c "echo \"\" | ~/minisign -s ~/minisign.key -S -m ./nanodump.tar.gz -t \"$MANIFEST\" -x nanodump.minisig"
 
     - name: "Publish Release"
       uses: "marvinpinto/action-automatic-releases@latest"
