--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Sign Package
       run: |
         touch ~/minisign.key && chmod 600 ~/minisign.key
-        echo "$MINISIGN_PRIVATE_KEY" > ~/minisign.key
+        echo -e "${{ secrets.MINISIGN_PRIVATE_KEY }}" > ~/minisign.key
         MANIFEST=$(cat extension.json | base64 -w 0)
         bash -c "echo \"\" | ~/minisign -s ~/minisign.key -S -m ./nanodump.tar.gz -t \"$MANIFEST\" -x nanodump.minisig"
 
